2002-05-03  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Unset all other environment variables which influence
	cvs. Pass -d $CVSROOT explicitly.

2002-05-01  Bruno Haible  <bruno@clisp.org>

	* autopoint-files: New directory.
	* add-to-autopoint-files: New file.
	* autopoint.in: New file.
	* Makefile.am (EXTRA_DIST): Add add-to-autopoint-files, archive.tar.gz.
	(DISTCLEANFILES): Add autopoint.
	(gettextsrcdir): New variable.
	(gettextsrc_DATA): New variable.
	(archive.tar.gz): New rule.
	* gettextize.in: Bump GETTEXT_VERSION value in configure.in.
	Ask maintainer to acknowledge the remaining changes.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Avoid the remarks about po/Makevars and config.guess
	if they are not necessary.

	* gettextize.in: New option -n/--dry-run.

	* gettextize.in: Use functions for maintainability.
	Remove undocumented option --run.

	* gettextize.in: Use 'echo' instead of '$echo'.

2002-04-29  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-menu-layout): Don't try to display tooltips
	for XEmacs.
	(po-subedit-mode-menu-layout): Likewise.

2002-04-28  Bruno Haible  <bruno@clisp.org>

	* gettextize.in: Treat mkinstalldirs like config.rpath.

2002-04-27  Karl Eichwalder  <ke@suse.de>

	* po-mode.el (po-mode-menu-layout): Add tooltips.
	(po-subedit-mode-menu-layout): Likewise.

	* po-mode.el (po-mode-menu-layout): Adopt terminology for editing
	from Emacs (cut/copy/paste).

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (lisp_LISP): Add po-compat.el.
	(EXTRA_DIST): Use it.

2002-03-17  Karl Eichwalder  <ke@suse.de>

	* po-compat.el: New file, extracted from po-mode.el.
	* po-mode.el (po-content-type-charset-alist, po-find-charset,
	po-find-file-coding-system-guts, po-find-file-coding-system): Move to
	po-compat.el.

2002-04-19  Bruno Haible  <bruno@clisp.org>

	* po-mode.el (po-team-name-to-code): Add Ido and Walloon. Change